--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,8 @@
 //! \\\\\\\\\\\\\\\\ header \\\\\\\\\\\\\\\\\
-
+@import "./layout/header";
+@import "./components/header-sections";
 // ???????????????????? main ??????????????????
 @import './base/reset';
-@import './componets/main-section1';
+@import './components/main-section1';
 @import './layout/main';
 // ||||||||||||||||||| footer |||||||||||||||
