--- a/src/sass/components/_main-section1.scss
+++ b/src/sass/components/_main-section1.scss
@@ -1,8 +1,13 @@
-@media screen and (min-width: 320px) and (max-width: 767px){
+@media screen and (min-width: 320px){
+    .main-section1{
+        display: flex;
+        justify-content: center;
+    }
     .list-cards{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        width: 320px;
     }
     .event{
         width: 138px;
@@ -57,8 +62,11 @@
         color: #FFFFFF;
         text-align: center;
     }
+    .event-21{
+        display: none;
+    }
     .nav-bar{
-        margin-top: 55px;
+        margin-top: 25px;
     }
     .ul-nav-bar{
         display: flex;
@@ -92,13 +100,78 @@
         margin-right: 0;
     }
     .li-nav:hover{
-        border: #DC56C5 1px solid;
-        border-radius: 20px 0;
+        border: 1px solid #DC56C5;
+        border-radius: 10px 0;
     }
 }
-@media screen and (min-width: 768px) and (max-width: 1111px){
+@media screen and (min-width: 768px){
+    .list-cards{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 650px;
 
+    }
+    .event{
+        width: 196px;
+        height: 312px;
+        list-style: none;
+        padding: 13px 14px 0 0;
+        margin-bottom: 60px;
+    }
+    .event:nth-child(odd){
+        margin-left: 0;
+    }
+    .event img{
+        width: 180px;
+        height: 227px;
+    }
+    .event h3{
+        height: 20px;
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .event h4{
+        height: 20px;
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .event p {
+        height: 17px;
+        font-size: 14px;
+        line-height: 17px;
+    }
+    .event-21{
+        display: block;
+    }
+    .nav-bar{
+        margin-top: 0;
+    }
 }
-@media screen and (min-width: 1112px) and (max-width: 1600px){
+@media screen and (min-width: 1112px){
+    .list-cards{
+        width: 860px;
+    }
+    .event{
+        margin-bottom: 60px;
+    }
+    .event h3{
+        height: 20px;
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .event h4{
+        height: 20px;
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .event p {
+        height: 17px;
+        font-size: 14px;
+        line-height: 17px;
+    }
+    .event-21{
+        display: none;
+    }
 
 }
