--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,12 +1,16 @@
-@media screen and (min-width: 320px) and (max-width: 767px){
+@media screen and (min-width: 320px) {
     main{
         height: 2905PX;
         background-color: black;
     }
 }
-@media screen and (min-width: 768px) and (max-width: 1111px){
-
+@media screen and (min-width: 768px){
+    .main{
+        height: 2700px;
+    }
 }
-@media screen and (min-width: 1112px) and (max-width: 1600px){
-
+@media screen and (min-width: 1112px){
+    .main{
+        height: 1960px;
+    }
 }
