--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,16 +1,16 @@
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px){
     main{
         height: 2905PX;
         background-color: black;
     }
 }
 @media screen and (min-width: 768px){
-    .main{
-        height: 2700px;
+    main{
+        height: 2750PX;
     }
 }
 @media screen and (min-width: 1112px){
-    .main{
-        height: 1960px;
+    main{
+        height: 1960PX;
     }
 }
