full-develop-footer

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,4 +5,6 @@
 @import './base/reset';
 @import './components/main-section1';
 @import './layout/main';
-// ||||||||||||||||||| footer |||||||||||||||
+// *||||||||||||||||||| footer |||||||||||||||*
+@import './components/footer-section';
+@import './layout/footer';
