--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 header {
   background-image: url("../src/images/hero.jpg");
   background-repeat: no-repeat;
@@ -93,8 +92,6 @@ header {
   padding-left: 30px;
 }
 
-=======
->>>>>>> main
 h1,
 h2,
 h3,
@@ -238,5 +235,39 @@ body {
   main {
     height: 2905PX;
     background-color: black;
+  }
+}
+footer div {
+  padding: 20% 5%;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+}
+footer div a {
+  color: #939393;
+  font-weight: 400;
+  font-size: 1em;
+  text-decoration: none;
+  transition: 0.5s color ease-in-out;
+}
+footer div a:hover {
+  color: #1174ad;
+}
+
+footer {
+  margin: 0;
+  background-color: black;
+}
+@media screen and (min-width: 480px) {
+  footer div {
+    padding: 1%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  footer div {
+    padding: 2%;
   }
 }/*# sourceMappingURL=index.css.map */
