add logo to header

--- a/src/sass/components/_header-sections.scss
+++ b/src/sass/components/_header-sections.scss
@@ -3,9 +3,14 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    @media screen and (min-width:768px) {
+        position: relative;
+        bottom: 80px; 
+    }
 }
 
 .search-inputs{
+    margin-bottom: 40px;
     @media screen and (min-width:768px) {
         display: flex;
         gap: 30px;    
@@ -15,6 +20,37 @@
     }
 }
 
+.logo-container{
+    width: 115px;
+    height: 95px;
+    background-color: #000;
+    border-radius: 0 0 305px 0;
+    background: linear-gradient(136.07deg, rgba(196, 196, 196, 0.03) 10.75%, rgba(196, 196, 196, 0) 92.33%);
+    backdrop-filter: blur(15px);
+    @media screen and (min-width:768px) {
+        width: 190px;
+        height: 175px;
+    }
+    @media screen and (min-width:1200px) {
+        width: 220px;
+        height: 200px;
+    }
+}
+.svg-logo{
+    position: relative;
+    right: 100px;
+    bottom: 15px;
+    height: 120px;
+    @media screen and (min-width:768px) {
+        right: 70px;
+        bottom: 25px;
+        height: 200px;
+    }
+    @media screen and (min-width:1200px) {
+        height: 240px;
+        right: 55px;
+    }
+}
 .search-header{
     font-family: 'Montserrat';
     font-size: 18px;
@@ -24,7 +60,6 @@
     width: 212px;
     color: #DC56C5;
     margin-bottom: 25px;
-    margin-top: 78px;
     @media screen and (min-width:480px) {
         font-size: 25px;
         width: 300px;
@@ -59,5 +94,5 @@
 }
 
 .search-by-country{
-    @extend .search-by-name
+    @extend .search-by-name;
 }
