--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -7,10 +7,18 @@
 @media screen and (min-width: 768px){
     main{
         height: 2750PX;
+        background-image: url("../images/bg-body-tablet.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
     }
 }
 @media screen and (min-width: 1112px){
     main{
         height: 1960PX;
+        background-image: url("../images/bg-body.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
     }
 }
