--- a/src/sass/components/_header-sections.scss
+++ b/src/sass/components/_header-sections.scss
@@ -51,30 +51,89 @@
         right: 55px;
     }
 }
-.search-header{
+// .search-header{
+//     font-family: 'Montserrat';
+//     font-size: 18px;
+//     font-weight: 900;
+//     line-height: 22px;
+//     text-align: center;
+//     width: 212px;
+//     color: #DC56C5;
+//     margin-bottom: 25px;
+//     @media screen and (min-width:480px) {
+//         font-size: 25px;
+//         width: 300px;
+//         line-height: 30px;
+//     }
+//     @media screen and (min-width:768px) {
+//         font-size: 30px;
+//         width: 353px;
+//         line-height: 37px;
+//     }
+//     @media screen and (min-width:1200px) {
+//         font-size: 50px;
+//         width: 600px;
+//         line-height: 61px;
+//     }
+// }
+.search-by-s{
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    height: 20px;
+    border-radius: 20px 0 0 20px;
+    padding: 10px 30px;
+    border: 0;
     font-family: 'Montserrat';
-    font-size: 18px;
-    font-weight: 900;
-    line-height: 22px;
-    text-align: center;
-    width: 212px;
-    color: #DC56C5;
-    margin-bottom: 25px;
-    @media screen and (min-width:480px) {
-        font-size: 25px;
-        width: 300px;
-        line-height: 30px;
-    }
-    @media screen and (min-width:768px) {
-        font-size: 30px;
-        width: 353px;
-        line-height: 37px;
-    }
-    @media screen and (min-width:1200px) {
-        font-size: 50px;
-        width: 600px;
-        line-height: 61px;
-    }
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #939393;
+}
+
+button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 0 20px 20px 0;
+}
+
+.icon{
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+    width: 12px;
+    height: 12px;
+    fill: #939393;
+}
+
+button:hover .icon{
+    fill: white;
+}
+
+.search-form{
+    width: 280px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+}
+
+.search-input {
+      width: 400px;
+      height: 40px;
+      margin: 8px 0;
+      box-sizing: border-box;
+      border: none;
+      border-radius: 5px 0 0 5px;
+}
+
+.search-by-s:focus {
+    outline: 0;
 }
 
 .search-by-name{
