--- a/src/sass/components/_header-sections.scss
+++ b/src/sass/components/_header-sections.scss
@@ -10,9 +10,13 @@
 }
 
 .search-inputs{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 40px;
     @media screen and (min-width:768px) {
-        display: flex;
+        flex-direction: row;
         gap: 30px;    
     }
     @media screen and (min-width:1200px) {
@@ -51,31 +55,34 @@
         right: 55px;
     }
 }
-// .search-header{
-//     font-family: 'Montserrat';
-//     font-size: 18px;
-//     font-weight: 900;
-//     line-height: 22px;
-//     text-align: center;
-//     width: 212px;
-//     color: #DC56C5;
-//     margin-bottom: 25px;
-//     @media screen and (min-width:480px) {
-//         font-size: 25px;
-//         width: 300px;
-//         line-height: 30px;
-//     }
-//     @media screen and (min-width:768px) {
-//         font-size: 30px;
-//         width: 353px;
-//         line-height: 37px;
-//     }
-//     @media screen and (min-width:1200px) {
-//         font-size: 50px;
-//         width: 600px;
-//         line-height: 61px;
-//     }
-// }
+.search-header{
+    font-family: 'Montserrat';
+    font-size: 18px;
+    font-weight: 900;
+    line-height: 22px;
+    text-align: center;
+    width: 212px;
+    color: #DC56C5;
+    margin-bottom: 25px;
+    @media screen and (min-width:480px) {
+        font-size: 25px;
+        width: 300px;
+        line-height: 30px;
+    }
+    @media screen and (min-width:768px) {
+        font-size: 30px;
+        width: 353px;
+        line-height: 37px;
+    }
+    @media screen and (min-width:1200px) {
+        font-size: 50px;
+        width: 600px;
+        line-height: 61px;
+    }
+}
+
+
+
 .search-by-s{
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
@@ -84,24 +91,26 @@
     padding: 10px 30px;
     border: 0;
     font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
     color: #939393;
+    &:focus{
+        outline: 0;
+    }
 }
 
-button{
+.search-by-s-btn{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 40px;
     width: 40px;
     border: 0;
-    padding: 0;
     cursor: pointer;
+    border-radius: 0 40px 40px 0;
     background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 0 20px 20px 0;
+    backdrop-filter: blur(10px);
 }
 
 .icon{
@@ -111,7 +120,7 @@ button{
     fill: #939393;
 }
 
-button:hover .icon{
+.search-by-s-btn:hover .icon{
     fill: white;
 }
 
@@ -121,37 +130,40 @@ button:hover .icon{
     justify-content: center;
     align-items: center;
     height: 40px;
-}
-
-.search-input {
-      width: 400px;
-      height: 40px;
-      margin: 8px 0;
-      box-sizing: border-box;
-      border: none;
-      border-radius: 5px 0 0 5px;
-}
-
-.search-by-s:focus {
-    outline: 0;
-}
-
-.search-by-name{
-    width: 250px;
-    height: 40px;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 20px;
-    font-family: 'Montserrat';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    color: #939393;
     margin-bottom: 25px;
-    border: none;
-    backdrop-filter: blur(10px);
-    padding-left: 30px;
+    @media screen and (min-width:768px) {
+        margin-bottom: 0;
+    }
 }
+
+// .search-input {
+//     width: 400px;
+//     height: 40px;
+//     margin: 8px 0;
+//     box-sizing: border-box;
+//     border: none;
+//     border-radius: 5px 0 0 5px;
+// }
+
+// .search-by-name{
+//     width: 250px;
+//     height: 40px;
+//     background: rgba(255, 255, 255, 0.2);
+//     border-radius: 20px;
+//     font-family: 'Montserrat';
+//     font-weight: 400;
+//     font-size: 16px;
+//     line-height: 20px;
+//     color: #939393;
+//     margin-bottom: 25px;
+//     border: none;
+//     backdrop-filter: blur(10px);
+//     padding-left: 30px;
+// }
 
 .search-by-country{
-    @extend .search-by-name;
+    @extend .search-by-s;
+    width: 298px;
+    height: 40px;
+    border-radius: 20px;
 }
