change border nav

--- a/src/sass/components/_main-section1.scss
+++ b/src/sass/components/_main-section1.scss
@@ -95,6 +95,7 @@
         justify-content: center;
         align-items: center;
         margin-right: 2px;
+        border: 1px solid transparent;
     }
     .li-nav:last-child{
         margin-right: 0;
