--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,7 +3,7 @@
 @import "components/header-sections";
 // ???????????????????? main ??????????????????
 @import 'base/reset';
-@import './components/main-section1';
+@import 'components/main-section1';
 @import 'layout/main';
 // *||||||||||||||||||| footer |||||||||||||||*
 @import 'components/footer-section';
