--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -12,7 +12,7 @@ footer{
         font-weight: 400;
         font-size: 1em;
         text-decoration:none; 
-        transition: 0.5s color ease-in-out;
+        transition: .5s color ease-in-out;
             &:hover{
                 color: #1174ad;
 
