--- a/src/sass/components/_main-section1.scss
+++ b/src/sass/components/_main-section1.scss
@@ -25,6 +25,15 @@
     .event-20{
         margin-bottom: 0;
     }
+    .ramka-event{
+        width: 108px;
+        height: 101px;
+        border: 1px solid rgba(220, 86, 197, 0.3);
+        border-radius: 50px 0px;
+        margin-bottom: -99px;
+        margin-left: 30px;
+        box-sizing: border-box;
+    }
     .event img{
         width: 128px;
         height: 161px;
@@ -122,6 +131,12 @@
     }
     .event:nth-child(odd){
         margin-left: 0;
+    }
+    .ramka-event{
+        width: 153px;
+        height: 143px;
+        margin-bottom: -140px;
+        margin-left: 40px;
     }
     .event img{
         width: 180px;
