--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -17,6 +17,9 @@ ul {
     margin: 0;
 }
 body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
