--- a/src/sass/components/_header-sections.scss
+++ b/src/sass/components/_header-sections.scss
@@ -86,6 +86,7 @@
     // background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
     border-radius: 20px;
+    padding: 0 10px;
 }
 
 .search-by-country{
