--- a/src/sass/components/_main-section1.scss
+++ b/src/sass/components/_main-section1.scss
@@ -40,7 +40,7 @@
         border-radius: 50px 0px;
     }
     .event h3{
-        height: 31px;
+        // height: 31px;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 700;
@@ -51,7 +51,7 @@
         margin-top: 5px;
     }
     .event h4{
-        height: 14px;
+        // height: 14px;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 400;
@@ -62,7 +62,7 @@
         margin: 5px 0;
     }
     .event p {
-        height: 12px;
+        // height: 12px;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 600;
@@ -135,7 +135,7 @@
     .ramka-event{
         width: 153px;
         height: 143px;
-        margin-bottom: -140px;
+        margin-bottom: -130px;
         margin-left: 40px;
     }
     .event img{
@@ -143,17 +143,17 @@
         height: 227px;
     }
     .event h3{
-        height: 20px;
+        // height: 20px;
         font-size: 16px;
         line-height: 20px;
     }
     .event h4{
-        height: 20px;
+        // height: 20px;
         font-size: 16px;
         line-height: 20px;
     }
     .event p {
-        height: 17px;
+        // height: 17px;
         font-size: 14px;
         line-height: 17px;
     }
@@ -173,17 +173,17 @@
         margin-right: 56px;
     }
     .event h3{
-        height: 20px;
+        // height: 20px;
         font-size: 16px;
         line-height: 20px;
     }
     .event h4{
-        height: 20px;
+        // height: 20px;
         font-size: 16px;
         line-height: 20px;
     }
     .event p {
-        height: 17px;
+        // height: 17px;
         font-size: 14px;
         line-height: 17px;
     }
