--- a/src/sass/components/_header-sections.scss
+++ b/src/sass/components/_header-sections.scss
@@ -83,20 +83,23 @@
 }
 
 .search-form{
-    // background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
     border-radius: 20px;
     padding: 0 10px;
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    margin-bottom: 25px;
+    @media screen and (min-width:768px) {
+        margin-bottom: 0;
+    }
 }
-
-.search-by-country{
-    backdrop-filter: blur(10px);
-}
-
 .search-by-s{
     background-color: rgba(255, 255, 255, 0.2);
-    // backdrop-filter: blur(10px);
     height: 20px;
+    width: 158px;
     border-radius: 20px 0 0 20px;
     padding: 10px 30px;
     border: 0;
@@ -115,12 +118,15 @@
     align-items: center;
     justify-content: center;
     height: 40px;
-    width: 40px;
+    width: 52px;
+    padding: 0 30px 0 10px;
     border: 0;
     cursor: pointer;
     border-radius: 0 40px 40px 0;
     background-color: rgba(255, 255, 255, 0.2);
-    // backdrop-filter: blur(10px);
+    &:hover{
+        fill: white;
+    }
 }
 
 .icon{
@@ -130,50 +136,13 @@
     fill: #939393;
 }
 
-.search-by-s-btn:hover .icon{
-    fill: white;
+.search-by-country{
+    backdrop-filter: blur(10px);
 }
-
-.search-form{
-    width: 280px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-    margin-bottom: 25px;
-    @media screen and (min-width:768px) {
-        margin-bottom: 0;
-    }
-}
-
-// .search-input {
-//     width: 400px;
-//     height: 40px;
-//     margin: 8px 0;
-//     box-sizing: border-box;
-//     border: none;
-//     border-radius: 5px 0 0 5px;
-// }
-
-// .search-by-name{
-//     width: 250px;
-//     height: 40px;
-//     background: rgba(255, 255, 255, 0.2);
-//     border-radius: 20px;
-//     font-family: 'Montserrat';
-//     font-weight: 400;
-//     font-size: 16px;
-//     line-height: 20px;
-//     color: #939393;
-//     margin-bottom: 25px;
-//     border: none;
-//     backdrop-filter: blur(10px);
-//     padding-left: 30px;
-// }
 
 .search-by-country{
     @extend .search-by-s;
-    width: 298px;
+    width: 270px;
     height: 40px;
     border-radius: 20px;
 }
