--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,10 +1,12 @@
-//! \\\\\\\\\\\\\\\\ header \\\\\\\\\\\\\\\\\
+//todo------------- general ---------------
+@import "components/loader";
+//! --------------- header ---------------
 @import "layout/header";
 @import "components/header-sections";
-// ???????????????????? main ??????????????????
+//? --------------- main ---------------
 @import 'base/reset';
 @import 'components/main-section1';
 @import 'layout/main';
-// *||||||||||||||||||| footer |||||||||||||||*
+//* --------------- footer ---------------
 @import 'components/footer-section';
 @import 'layout/footer';
