--- a/src/sass/components/_main-section1.scss
+++ b/src/sass/components/_main-section1.scss
@@ -4,7 +4,7 @@
         display: none;
         position: fixed;
         z-index: 1;
-        left: 50%;
+        left: 20%;
         top: 0;
         background-color: rgba(0, 0, 0, 0.8);
         width: 100%;
@@ -267,7 +267,7 @@
         width: 138px;
         height: 242px;
         list-style: none;
-        padding: 10px 9px 0 0;
+        // padding: 10px 9px 0 0;
         margin-bottom: 33px;
     }
     .event:nth-child(odd){
@@ -292,6 +292,7 @@
         width: 128px;
         height: 161px;
         border-radius: 50px 0px;
+        object-fit: cover;
     }
     .event h3{
         // height: 31px;
