info about event in modal

--- a/src/sass/components/_main-section1.scss
+++ b/src/sass/components/_main-section1.scss
@@ -267,7 +267,7 @@
         width: 138px;
         height: 242px;
         list-style: none;
-        // padding: 10px 9px 0 0;
+        padding: 10px 9px 0 0;
         margin-bottom: 33px;
     }
     .event:nth-child(odd){
