--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -1,6 +1,7 @@
 footer{
+    margin: 0;
+    padding: 0;
     div{
-        padding: 20% 5% ;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 400;
