--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,6 +1,8 @@
 footer{
-    margin:0;   
-    background-color: black; 
+    margin:0; 
+    background-image: url("../images/bg-body.jpg");
+    background-position:initial;
+    background-size: 2670px auto;
     @media screen and (min-width:480px) {
         div{
             padding: 1%;
