--- a/src/sass/components/_main-section1.scss
+++ b/src/sass/components/_main-section1.scss
@@ -11,7 +11,7 @@
         height: 100%;
         margin: 0 auto;
         justify-content: center;       
-
+        z-index: 3;
         &-window {
             position: relative;
             top: 2%;
@@ -43,9 +43,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-     
-    
+        object-fit: initial;
+        
         & img {
+            object-fit: initial;
             height: 90px;
             width: 90px;
             border-radius: 100%;
@@ -60,7 +61,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-
+        
         & h2 {
             font-family: 'Montserrat';
             font-style: normal;
@@ -71,6 +72,7 @@
         }
 
         & p {
+            overflow: scroll;
             font-family: 'Montserrat';
             font-style: normal;
             font-weight: 400;
@@ -80,6 +82,11 @@
             color: #0E0E0E;
             margin-top: 5px;
             width: 243px;
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+            &::-webkit-scrollbar{
+                display: none;
+            }
         }
     }
 
@@ -273,16 +280,25 @@
         list-style: none;
         padding: 10px 9px 0 0;
         margin-bottom: 33px;
+        // overflow: scroll;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+        // transition: trasnslateY() 5s ease-out;
+        transition-property: transform;
+        transition-duration: 300ms;
+        transition-timing-function: ease-out;
+    
+        &::-webkit-scrollbar {
+            display: none;
+        }
+        &:hover{
+            transform: translateY(-8);
+        }
+        &:nth-child(odd){
+            margin-left: 10px;
+        }
     }
-    .event:nth-child(odd){
-        margin-left: 10px;
-    }
-    .event-19{
-        margin-bottom: 0;
-    }
-    .event-20{
-        margin-bottom: 0;
-    }
+
     .ramka-event{
         width: 108px;
         height: 101px;
@@ -291,6 +307,8 @@
         margin-bottom: -99px;
         margin-left: 30px;
         box-sizing: border-box;
+        position: relative;
+        z-index: 1;
     }
     .event img{
         object-fit: cover;
@@ -300,7 +318,8 @@
         object-fit: cover;
     }
     .event h3{
-        // height: 31px;
+        min-height: 20px;
+        max-height: 60px;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 700;
@@ -309,6 +328,12 @@
         text-align: center;
         color: #DC56C5;
         margin-top: 5px;
+        overflow-y: scroll;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
     .event h4{
         // height: 14px;
@@ -321,7 +346,7 @@
         color: #FFFFFF;
         margin: 5px 0;
     }
-    .event p {
+    .event-location{
         // height: 12px;
         font-family: 'Montserrat';
         font-style: normal;
@@ -331,53 +356,9 @@
         color: #FFFFFF;
         text-align: center;
     }
-    .event-21{
-        display: none;
-    }
-    // .nav-bar{
-    //     margin-top: 25px;
-    // }
-    // .ul-nav-bar{
-    //     display: flex;
-    //     justify-content: center;
-    // }
-    // .p-nav{
-    //     width: 6px;
-    //     height: 17px;
-    //     font-family: 'Montserrat';
-    //     font-style: normal;
-    //     font-weight: 400;
-    //     font-size: 14px;
-    //     line-height: 17px;
-    //     color: #FFFFFF;
-    // }
-    // .p-nav6{
-    //     width: 9px;
-    // }
-    // .p-nav7{
-    //     width: 17px;
-    // }
-    // .li-nav{
-    //     width: 30px;
-    //     height: 30px;
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     margin-right: 2px;
-    //     border: 1px solid transparent;
-    //     border-radius: 10px 0;
-    //     transition: .3s border ease-in-out;
-    // }
-    // .li-nav:last-child{
-    //     margin-right: 0;
-    // }
-    // .li-nav:hover{
-    //     border: 1px solid #DC56C5;
-    // }
-    // .li-nav:focus{
-    //     border: 1px solid #DC56C5;
-    // }
-}
+
+    
+
 
 
 @media screen and (min-width: 768px){
@@ -482,14 +463,11 @@
         font-size: 16px;
         line-height: 20px;
     }
-    .event p {
+    .event-location {
         // height: 17px;
         font-size: 14px;
         line-height: 17px;
     }
-    .event-21{
-        display: block;
-    } 
 }
 
 
@@ -517,7 +495,7 @@
             font-size: 24px;
             line-height: 29px;
         }
-
+        
         & p {
             font-style: normal;
             font-weight: 400;
@@ -590,7 +568,7 @@
         margin-right: 56px;
     }
     .event h3{
-        // height: 20px;
+        // height: 60px;
         font-size: 16px;
         line-height: 20px;
     }
@@ -599,13 +577,10 @@
         font-size: 16px;
         line-height: 20px;
     }
-    .event p {
+    .event-location {
         // height: 17px;
         font-size: 14px;
         line-height: 17px;
-    }
-    .event-21{
-        display: none;
     }
     .event:nth-child(4n){
         margin-right: 0;
@@ -643,4 +618,5 @@
             color: #DC56C5;
         }
     }
+}
 }
