--- a/src/sass/components/_main-section1.scss
+++ b/src/sass/components/_main-section1.scss
@@ -72,7 +72,8 @@
         }
 
         & p {
-            overflow: scroll;
+            overflow-y: scroll;
+            height: 60px;
             font-family: 'Montserrat';
             font-style: normal;
             font-weight: 400;
@@ -135,6 +136,8 @@
             font-size: 16px;
             color: #0E0E0E;
             margin-top: 4px;
+            max-height: 40px;
+            overflow-y: scroll;
         }
     }
 
@@ -159,6 +162,8 @@
             font-size: 16px;
             color: #0E0E0E;
             margin-top: 4px;
+            max-height: 40px;
+            overflow-y: scroll;
         }
     }
 
@@ -279,7 +284,7 @@
         height: 242px;
         list-style: none;
         padding: 10px 9px 0 0;
-        margin-bottom: 33px;
+        margin-bottom: 40px;
         // overflow: scroll;
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
@@ -320,7 +325,7 @@
     }
     .event h3{
         min-height: 20px;
-        max-height: 60px;
+        max-height: 45px;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 700;
@@ -458,6 +463,7 @@
         // height: 20px;
         font-size: 16px;
         line-height: 20px;
+        max-height: 55px;
     }
     .event h4{
         // height: 20px;
