--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 //! --------------- header ---------------
 @import "layout/header";
 @import "components/header-sections";
+@import "components/select-country";
 //? --------------- main ---------------
 @import 'base/reset';
 @import 'components/main-section1';
