--- a/src/sass/components/_select-country.scss
+++ b/src/sass/components/_select-country.scss
@@ -3,6 +3,8 @@
     backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.2);
     border-radius: 20px;
+    position: relative;
+    z-index: 2;
 }
 
 .select-btn{
