--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,3 +11,5 @@
 //* --------------- footer ---------------
 @import 'components/footer-section';
 @import 'layout/footer';
+// --------------- failure ---------------
+@import 'components/failure';
