--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,3 +10,4 @@
 //* --------------- footer ---------------
 @import 'components/footer-section';
 @import 'layout/footer';
+@import "components/theme";
