--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,8 +1,6 @@
 footer{
     margin:0; 
-    background-image: url("../images/bg-body.jpg");
-    background-position:initial;
-    background-size: 2670px auto;
+    background-color: rgba(14, 14, 14, 1);
     @media screen and (min-width:480px) {
         div{
             padding: 1%;
