--- a/src/sass/components/_header-sections.scss
+++ b/src/sass/components/_header-sections.scss
@@ -56,6 +56,22 @@
         right: 55px;
     }
 }
+.header_thema_and_logo{
+    display: flex;
+    justify-content: space-between;
+}
+.thema{
+    width: 50px;
+    height: 50px;
+}
+.page-theme{
+    width: 50px;
+    height: 50px;
+    background-color: inherit;
+    border: 0;
+    margin-top: 40px;
+    margin-left: -40px;
+}
 .search-header{
     font-family: 'Montserrat';
     font-size: 18px;
