--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,3 +13,6 @@
 @import 'layout/footer';
 // --------------- failure ---------------
 @import 'components/failure';
+
+//==================theme================
+@import "components/theme";
