--- a/src/sass/components/theme.scss
+++ b/src/sass/components/theme.scss
@@ -9,7 +9,7 @@
     color: black;
 }
 .light-header{
-    background-image: url("../images/pic.jpg");
+    background-image: url("../images/white-header.jpg");
 }
 .light-main{
     background-image: url("../images/bg-body-white.jpg");
