--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,7 +12,7 @@
 @import 'components/footer-section';
 @import 'layout/footer';
 // --------------- failure ---------------
-// @import 'components/failure';
+@import 'components/failure';
 
 //==================theme================
 @import 'components/theme';
