--- a/src/sass/components/theme.scss
+++ b/src/sass/components/theme.scss
@@ -4,9 +4,9 @@
     color: white;
 }
 .light::before{
-    content: "⏾";
+    content: "☾";
     font-size: 50px;
-    color: black;
+    color: white;
 }
 .light-header{
     background-image: url("../images/white-header.jpg");
