--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,8 +11,6 @@
 //* --------------- footer ---------------
 @import 'components/footer-section';
 @import 'layout/footer';
-// --------------- failure ---------------
-@import 'components/failure';
 
-//==================theme================
+// ---------------theme ---------------
 @import 'components/theme';
