--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,4 +13,4 @@
 @import 'layout/footer';
 
 // ---------------theme ---------------
-@import 'components/theme';
+@import 'components/theme-mode';
