--- a/src/sass/components/_theme-mode.scss
+++ b/src/sass/components/_theme-mode.scss
@@ -12,17 +12,24 @@
     filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 0.25));
     background-color: #181818;
     backdrop-filter: blur(10px);
-    transition: .2s linear;
+    // transition: .2s linear;
+
+    .icon-moon{
+        display: none;
+        width: 30px;
+        height: 30px;
+        fill: #000000;
+    }
     
-    .icon{
+    .icon-sun{
         width: 30px;
         height: 30px;
         fill: #fff;
-        transition: .2s linear;
+        // transition: .2s linear;
     }
 
     .icon-dark{
-        fill: black;
+        fill: #000000;
     }
 }
 
